tdf#113707 EMF+ Add support for ResetClip record

Change-Id: I00ab6ac7a5e157cff469c2afd5e14d5f06f01bd0